# multi-agent-ML-assistant

./: .env.example  .gitignore  README.md  ablation_study.py  docker-compose.yml  fix_agents.py  main.py  pyproject.toml  requirements.txt
datasets/: adult_income_description.md  diabetes.csv
experiments/: ablation_study.py  automl_baselines.py  download_datasets.py  extended_evaluation.py  single_agent_baseline.py
experiments/results/: extended_evaluation.md  table_vi_automl_comparison.md  table_vii_ablation.md  table_viii_single_vs_multi.md  validation_metrics.csv
scripts/: download_adult_dataset.py  download_datasets.py
src/: config.py  graph.py  llm_helper.py  state.py
src/agents/: cleaner.py  critic.py  deployer.py  feature_eng.py  modeler.py  profiler.py
src/datasets/: telco_churn.csv
src/prompts/: cleaner_prompt.py  critic_prompt.py  deployer_prompt.py  feature_eng_prompt.py  modeler_prompt.py  profiler_prompt.py
src/tools/: code_executor.py  code_scaffold.py  code_validator.py  file_utils.py  leakage_detector.py  narration.py  pre_exec_reviewer.py
src/ui/: app.py  styles.css  styles.py  ui_components.py
src/ui/components/: approval_panel.py  chat_panel.py  diagnosis_panel.py  pipeline_status.py  results_panel.py  sidebar.py
tests/: test_agents.py  test_cleaner.py  test_critic.py  test_deployer.py  test_e2b.py  test_feature_eng.py  test_full_pipeline.py  test_modeler.py  test_multi_dataset.py  test_profiler.py  test_titanic_only.py
